mobile header gone

--- a/css/style.css
+++ b/css/style.css
@@ -730,6 +730,11 @@ a:hover {
         font-size: 1.25rem;
     }
     
+    /* Hide page header on mobile */
+    .page-header {
+        display: none;
+    }
+    
     /* Mobile hamburger menu */
     .hamburger {
         display: flex;
