--- a/css/style.css
+++ b/css/style.css
@@ -313,7 +313,9 @@ a:hover {
 .nft-row {
     display: grid;
     grid-template-columns: 5fr 3fr;
-    gap: 2rem;
+    grid-template-rows: auto auto;
+    column-gap: 2rem;
+    row-gap: 0;
     margin-top: 4vh;
     margin-bottom: 5vh;
     padding: 2rem;
@@ -383,14 +385,19 @@ a:hover {
     overflow: hidden;
     cursor: zoom-in;
     order: 0;
-    grid-column: 1;
     grid-row: 1;
+    grid-column: 1;
     border: 0.625rem solid #1d0101;
     margin: 2rem;
+    margin-bottom: 0;
     line-height: 0;
+    align-self: start;
 }
 
 .nft-image {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-size: contain;
@@ -406,11 +413,16 @@ a:hover {
 .image-column {
     order: 1;
     grid-column: 1;
-    grid-row: 2;
+    grid-row: 1;
+    display: f2;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+    width: 90%;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-top: 0;
+    align-self: start
 
 .pixel-overlay {
     position: absolute;
@@ -625,7 +637,7 @@ a:hover {
 
 .footer-section h4 {
     font-family: 'Oswald', sans-serif;
-    color: var(--bk);
+    color: var(--bg);
     margin-bottom: 0.75rem;
     font-size: 1.1rem;
 }
@@ -703,7 +715,8 @@ a:hover {
     
     .nft-row {
         grid-template-columns: 1fr 1fr;
-        gap: 1.5rem;
+        column-gap: 1.5rem;
+        row-gap: 0;
     }
     
     .text-block {
@@ -719,6 +732,8 @@ a:hover {
     .image-column {
         grid-column: 1;
         grid-row: 2;
+        align-self: start;
+        margin-top: 0;
     }
     
     .container {
@@ -745,7 +760,8 @@ a:hover {
     
     .nft-row {
         grid-template-columns: 1fr;
-        gap: 1rem;
+        column-gap: 0;
+        row-gap: 0;
         margin-bottom: 6vh;
         padding: 1rem;
     }
@@ -780,13 +796,16 @@ a:hover {
     
     .text-block h3,
     .text-block ul,
-    .text-block > p:not(:first-of-type):not(:has(.price-btn)),
-    .nav-links-bottom {
+    .text-block > p:not(:first-of-type):not(:has(.price-btn)) {
         display: none;
     }
     
     .text-block p:has(.price-btn) {
         display: block;
+    }
+    
+    .nav-links-bottom {
+        display: flex;
     }
     
     .nft-image-wrap {
@@ -860,5 +879,10 @@ a:hover {
     
     .nav-links .dropdown-toggle {
         padding-bottom: 0;
+    }
+    
+    /* Hide Quick Links footer section on mobile */
+    .footer-section:nth-child(2) {
+        display: none;
     }
 }
