--- a/css/style.css
+++ b/css/style.css
@@ -422,7 +422,8 @@ a:hover {
     margin-left: 2rem;
     margin-right: 2rem;
     margin-top: 0;
-    align-self: start
+    align-self: start;
+}
 
 .pixel-overlay {
     position: absolute;
