--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,7 @@ a:hover {
     margin-top: 4vh;
     margin-bottom: 5vh;
     padding: 2rem;
+    padding-top: 4rem;
     align-items: start;
     background-image: url(../images/section-background.jpg);
     background-size: cover;
@@ -330,6 +331,14 @@ a:hover {
 .nft-row:hover {
     transform: translateY(-0.3125rem);
     box-shadow: 0 1.25rem 2.5rem rgba(0,0,0,0.16);
+}
+
+.left-column-block {
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .text-block {
@@ -389,6 +398,7 @@ a:hover {
     grid-column: 1;
     border: 0.625rem solid #1d0101;
     margin: 2rem;
+    margin-top: 5rem;
     margin-bottom: 0;
     line-height: 0;
     align-self: start;
@@ -786,6 +796,18 @@ a:hover {
     
     .image-column {
         display: none;
+    }
+    
+    .image-meta {
+        display: none;
+    }
+    
+    .quote-block {
+        grid-column: 1;
+        grid-row: 3;
+        order: 3;
+        margin: 1rem auto;
+        width: 90%;
     }
     
     /* Show only essential content on mobile */
